--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/node": "^14.0.14",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "knex": "^0.21.1"
+    "knex": "^0.21.1",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
