--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,15 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "add": "^2.0.6",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "remove": "^0.1.5",
+    "typescript": "~3.7.2",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
